# Apollo_COPT

./: .gitignore  01_generate_instances.py  Apollo.py  GCN.py  README.md  copt.py  evaluate.py  helper.py  main.py  plotLoss.py  pyproject.toml  trainPredictModel.py  utilities.py
